1-8-09: #1085, delete obsolete tracking message types
1-8-09: #1058, increase height of PhetTabbedPane.TabBase by 50%
1-7-09: #1055, add support for locale country code to phetcommon
1-6-09: #920, back out quit handler for Mac OS X and contrib/apple (OSXAdapter)
1-5-09: add PhetApplication.getInstance(), deprecate instance()
1-5-09: #1075, confirmation dialog for "Reset All" has unnecessary Cancel button
1-4-09: #1069, developer dialog for setting tab properties
1-4-09: #1069, add PhetTabbedPane.setSelectedTextColor, setUnselectedTextColor
1-3-09: #1067, simplify class hierarchy for preferences file
12-15-08: #1045, need a tracking message for close button in window dressing of auto update dialog
12-15-08: #1043, "update canceled" action is not consistently tracked
12-15-08: #1042, delete tracker_version field from tracking messages, it is obsolete
12-15-08: #1041, identify a tracking message format by 3 fields: message_type, message_version, sim_type
12-15-08: #862, add tracking message fields to match database design spec
12-15-08: #862, change tracking message names and field to use "_" instead of "-"
12-15-08: #1042, tracker_version should be sent with every message
12-15-08: #1041, each message_type should have a separate message_version value
12-15-08: #1041, message_version should be sent with every message
12-15-08: #1040, reorganize and document constants for state-changed and action-performed messages
12-15-08: #1032, validate JAR files downloaded by SimUpdater
12-10-08: #1035, add preferred fonts for Chinese-Taiwan (tc), identical to Chinese (zh)
12-10-08: #1030, JARLauncher makes bad assumptions about properties file
12-10-08: #993 (reopened), disabling tracking or updates causes tabs to be hidden in Preferences dialog
12-10-08: #1026, create $HOME/.phet if needed when incrementing session count
12-10-08: #1027, create abstractions for $HOME/.phet and files in that dir
12-03-08: #920, add "mac-osx-quit" tracking message