@@ -1,9 +1,7 @@
 package edu.colorado.phet.common.phetcommon.tracking;
 
-import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Date;
 
 /**
  * TrackingMessage is the base class for tracking messages sent by a simulation.
@@ -17,15 +15,10 @@ public abstract class TrackingMessage {
 
     private final ArrayList fields = new ArrayList();
 
-    public TrackingMessage( SessionID sessionID, String messageType, String messageVersion ) {
-        final long currentTime = System.currentTimeMillis();
+    public TrackingMessage( String messageType, String messageVersion ) {
         addField( new TrackingMessageField( "message_type", messageType ) );
-        addField( new TrackingMessageField( "sim_type", "java" ) );
         addField( new TrackingMessageField( "message_version", messageVersion ) );
-        addField( new TrackingMessageField( "message_sent_time", currentTime + "" ) );
-        // for debug purposes, so that message_sent_time is human-readable
-        addField( new TrackingMessageField( "message_sent_time_debug", new SimpleDateFormat( "yyyy-MM-dd_HH:mm:ss" ).format( new Date( currentTime ) ) ) );
-        addField( new TrackingMessageField( "session_id", sessionID.toString() ) );
+        addField( new TrackingMessageField( "sim_type", "java" ) );
     }
 
     public void addFields( TrackingMessageField[] list ) {
